--- a/index.html
+++ b/index.html
@@ -4,27 +4,26 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="img/1-goride-logo.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="rgb(28, 28, 28)" />
+    <meta name="theme" content="rgb(28, 28, 28)" />
+    <meta name="description" content="Combo Dex - 
+           Our cutting-edge contract is specifically designed to trade and arbitrage funds on a decentralized exchange (DEX),
+           utilizing automated strategies that take advantage of price inefficiencies and other opportunities to generate profits for users.
+          " />
+    
+    <meta property="og:title" content="Combo Dex - A Contract for Passive Income Generation">
+    <meta property="og:type" content="article" />
+    <meta property="og:description"
+      content="The DeFi platform that harnesses the power of automation and blockchain technology to generate passive income for its users.">
+    <meta property="og:image" content="%PUBLIC_URL%/card-image.jpg">
+    <meta property="og:url" content="https://combodex.cc/info">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta http-equiv='cache-control' content='no-cache'>
+    <meta http-equiv='expires' content='0'>
+    <meta http-equiv='pragma' content='no-cache'>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#1e1e20" />
-  <meta name="theme" content="#1e1e20" />
-  <meta name="description"
-    content="
-1go: Campus ride-hailing in UniIlorin, soon expanding to KWASU. Fast, cheap, reliable rides with top-notch experience for students in Nigeria." />
-
-  <meta property="og:title" content="1GoRide- The leading campus ride-hailing brand in Nigeria">
-  <meta property="og:type" content="article" />
-  <meta property="og:description"
-    content="1go: Campus ride-hailing in UniIlorin, soon expanding to KWASU. Fast, cheap, reliable rides with top-notch experience for students in Nigeria.">
-  <meta property="og:image" content="img/suzuki-mini-bus-back.jpg">
-  <meta property="og:url" content="">
-  <meta name="twitter:card" content="img/suzuki-mini-bus-back.jpg">
-  <meta http-equiv='cache-control' content='no-cache'>
-  <meta http-equiv='expires' content='0'>
-  <meta http-equiv='pragma' content='no-cache'>
-
-  <title>1GoRide</title>
+  <title>Combo Dex</title>
 </head>
 
 <body>
