--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="img/1-goride-logo.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="rgb(28, 28, 28)" />
-    <meta name="theme" content="rgb(28, 28, 28)" />
-    <meta name="description" content="Combo Dex - 
-           Our cutting-edge contract is specifically designed to trade and arbitrage funds on a decentralized exchange (DEX),
-           utilizing automated strategies that take advantage of price inefficiencies and other opportunities to generate profits for users.
-          " />
-    
-    <meta property="og:title" content="Combo Dex - A Contract for Passive Income Generation">
-    <meta property="og:type" content="article" />
-    <meta property="og:description"
-      content="The DeFi platform that harnesses the power of automation and blockchain technology to generate passive income for its users.">
-    <meta property="og:image" content="%PUBLIC_URL%/card-image.jpg">
-    <meta property="og:url" content="https://combodex.cc/info">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta http-equiv='cache-control' content='no-cache'>
-    <meta http-equiv='expires' content='0'>
-    <meta http-equiv='pragma' content='no-cache'>
-
-  <title>Combo Dex</title>
+  <link rel="icon" type="image/svg+xml" href="img/combodex-logo.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#1e1e20" />
+  <meta name="theme" content="#1e1e20" />
+  <meta name="description" content="The DeFi platform that harnesses the power of automation and blockchain technology to generate passive income for its users. " />
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
+  <meta property="og:title" content="ComboDex - A Contract for Passive Income Generation">
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="img/marketing-banner.png">
+  <meta property="og:url" content="https://combodex.cc">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:description" content="The DeFi platform that harnesses the power of automation and blockchain technology to generate passive income for its users.">
+  <meta property="og:site_name" content="ComboDex">
+  <meta name="twitter:image:alt" content="ComboDex">
+  <meta name="twitter:site" content="@ComboDex">
+  <title>ComboDex</title>
 </head>
 
 <body>
